--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Vendor/SwiftyJSON"]
 	path = Vendor/SwiftyJSON
 	url = git@github.com:SwiftyJSON/SwiftyJSON.git
+[submodule "Vendor/HanakeSwift"]
+	path = Vendor/HanakeSwift
+	url = git@github.com:Haneke/HanekeSwift.git
