summary description speed up

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "Vendor/JHProgressHUD"]
 	path = Vendor/JHProgressHUD
 	url = git@github.com:harikrishnant1991/JHProgressHUD.git
+[submodule "Vendor/GoogleAnalytics"]
+	path = Vendor/GoogleAnalytics
+	url = git@github.com:danielctull-forks/GoogleAnalytics-SDK-iOS.git
+[submodule "Vendor/ImageLoaderSwift"]
+	path = Vendor/ImageLoaderSwift
+	url = git@github.com:hirohisa/ImageLoaderSwift.git
